@@ -81,40 +81,34 @@ bool CKRR::save(FILE* dstfile)
 	return false;
 }
 
-CLabels* CKRR::classify(CLabels* output)
+CLabels* CKRR::classify()
 {
-	if (labels)
-	{
-		ASSERT(output==NULL);
-		ASSERT(kernel);
+	ASSERT(kernel);
 
-		// Get kernel matrix
-		int32_t m=0;
-		int32_t n=0;
-		float64_t* K=kernel->get_kernel_matrix_real(m, n, NULL);
-		ASSERT(K && m>0 && n>0);
-		float64_t* Yh=new float64_t[n];
+	// Get kernel matrix
+	int32_t m=0;
+	int32_t n=0;
+	float64_t* K=kernel->get_kernel_matrix_real(m, n, NULL);
+	ASSERT(K && m>0 && n>0);
+	float64_t* Yh=new float64_t[n];
 
-		// predict
-		// K is symmetric, CblasColMajor is same as CblasRowMajor 
-		// and used that way in the origin call:
-		// dgemv('T', m, n, 1.0, K, m, alpha, 1, 0.0, Yh, 1);
-		int m_int = (int) m;
-		int n_int = (int) n;
-		cblas_dgemv(CblasColMajor, CblasTrans, m_int, n_int, 1.0, (double*) K,
-			m_int, (double*) alpha, 1, 0.0, (double*) Yh, 1);
+	// predict
+	// K is symmetric, CblasColMajor is same as CblasRowMajor 
+	// and used that way in the origin call:
+	// dgemv('T', m, n, 1.0, K, m, alpha, 1, 0.0, Yh, 1);
+	int m_int = (int) m;
+	int n_int = (int) n;
+	cblas_dgemv(CblasColMajor, CblasTrans, m_int, n_int, 1.0, (double*) K,
+		m_int, (double*) alpha, 1, 0.0, (double*) Yh, 1);
 
-		delete[] K;
+	delete[] K;
 
-		output=new CLabels(n);
-		output->set_labels(Yh, n);
+	CLabels* output=new CLabels(n);
+	output->set_labels(Yh, n);
 
-		delete[] Yh;
+	delete[] Yh;
 
-		return output;
-	}
-
-	return NULL;
+	return output;
 }
 
 float64_t CKRR::classify_example(int32_t num)
